--- a/main.tex
+++ b/main.tex
@@ -20,12 +20,13 @@
 \etocsettocstyle{}{}
 
 \pagestyle{fancy}
-\include{\TexPath/2010}
-\include{\TexPath/2011}
-\include{\TexPath/2012}
+% \include{\TexPath/2010}
+% \include{\TexPath/2011}
+% \include{\TexPath/2012}
 \include{\TexPath/2013}
 \include{\TexPath/2014}
 \include{\TexPath/2015}
 \include{\TexPath/2016}
 \include{\TexPath/2017}
+\include{\TexPath/2018}
 \end{document}
